--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   get: ^4.7.2
   flutter_screenutil: ^5.9.3
   pinput: ^5.0.1
+  fluttertoast: ^8.2.12
+  dio:
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
